# Dalux_RPA

./: .gitignore  EAN_DB.json  README.md  detectCrash.sh  emails.txt  mkdocs.yml  modes.txt  pyproject.toml  pytest.ini  run.sh  send_stats.sh  stats.py  stop.sh
dalux-rpa/: main.py  stats.py
dalux-rpa/RPAs/: EAN_PSP.py  asset.py  rum.py
dalux-rpa/Utils/: config.py  fetch.py  log.py  parserS.py
docs/: index.md
mockdata/: fake.env
setup/: dalux_rpa.service  emails.txt  indmeldelse.service  run
src/: config.py  config.toml  estimatingEAN.py  fetch.py  logger.py  main.py  parser.py  patch.py  stats.py
src/RPAs/: EAN_PSP.py  rum.py
src/Utils/: fetch.py  log.py  parserS.py  patch.py
src/rpa_modules/: asset.py  ean_psp.py  room.py
src/utils/: config.py  fetch.py  log.py  parserS.py  patch.py
tests/unittests/: test_config.py
