[tool.poetry]
name = "dalux-rpa"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.mailalias@proton.me>"]
readme = "README.md"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
jsonpath-ng = "^1.6.1"
requests = "^2.31.0"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
mkdocs = "^1.5.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
