[tool.poetry]
name = "dalux-rpa"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.mailalias@proton.me>"]
readme = "README.md"
license = "GPL-3.0"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
jsonpath-ng = "^1.6.1"
requests = "^2.31.0"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
mkdocs = "^1.5.3"
black = "^24.1.0"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.24.0"}
mkdocs-material = "^9.5.5"
pytest-cov = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"

[project]
requires-python = ">=3.11"

[tool.ruff]
src = ["src"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
